--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
     "node-sass": "^4.9.3",
+    "pdfjs-dist": "^2.0.489",
     "sass-loader": "^7.1.0"
   }
 }
